src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__env__u.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"env -u _ env\")?"
---
env -u _ env

0  3   `env`  CALLABLE `env`
3  5   ` -`   punctuation.definition.parameter
5  6   `u`    variable.parameter.option
7  8   `_`    meta.function-call.arguments
9  12  `env`  CALLABLE `env`
