src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__env__u_no_space.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"env -u_ env\")?"
---
env -u_ env

0  3   `env`  CALLABLE `env`
3  5   ` -`   punctuation.definition.parameter
5  6   `u`    variable.parameter.option
6  7   `_`    meta.function-call.arguments
8  11  `env`  CALLABLE `env`
